<resources>
    <string name="app_name">ChatAndPlay</string>
    <string name="logout">Logout</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pseudo">Pseudo</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="need_new_account">Need New Account</string>
    <string name="welcome_to_chat_and_play">Welcome To Chat And Play</string>
    <string name="account_setting">Account Setting</string>
    <string name="all_users">All users</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login to Your Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_request_frag">Welcome to Request Frag</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="textview">TextView</string>
    <string name="this_is_my_pseudo">This is My Pseudo</string>
    <string name="game_frag">Game Frag</string>
    <string name="bachar_bhouri">Bachar Bhouri</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="display_name">Display Name</string>
    <string name="my_status">My Status</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
