<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bada.chatandplay.RegisterActivity">

    <EditText
        android:id="@+id/reg_pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ed_new_account"
        android:layout_below="@+id/ed_new_account"
        android:layout_marginTop="55dp"
        android:ems="10"
        android:hint="@string/pseudo"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="185dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/reg_pass" />

    <EditText
        android:id="@+id/reg_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ed_new_account"
        android:layout_below="@+id/reg_pass"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/reg_btn_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_confirm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:background="@color/colorAccent"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <Button
        android:id="@+id/reg_show"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/reg_pass"
        android:layout_marginStart="16dp"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/reg_confirm"
        android:background="@drawable/showass"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

    <TextView
        android:id="@+id/ed_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
</RelativeLayout>
