<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bada.chatandplay.LoginActivity">

    <TextView
        android:id="@+id/ed_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/login_to_your_account"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/log_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/ed_new_account"
        android:layout_below="@+id/ed_new_account"
        android:layout_marginTop="82dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="UnknownIdInLayout"
        android:layout_below="@+id/log_email"
        android:layout_alignStart="@+id/log_email" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/login_pass"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
