<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bada.chatandplay.StartActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/textView"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/welcome_to_chat_and_play"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/start_ref_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_log_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/need_new_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/start_log_btn"
        android:layout_width="@android:dimen/thumbnail_height"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:background="@color/colorAccent"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
