<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_light_pressed"
    tools:context="com.example.bada.chatandplay.ProfileActivity">

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:contentDescription=""
        android:scaleType="fitXY"
        app:srcCompat="@drawable/bada"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/disp_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/profile_photo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/profile_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/my_status"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/disp_name"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/profile_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/total_friends"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/btn_request"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_decline"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:background="@color/colorAccent"
        android:elevation="0dp"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/send_friend_request"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/decline_friend_request"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textStyle="bold" />
</RelativeLayout>
